--- a/public/assets/styles/styles.css
+++ b/public/assets/styles/styles.css
@@ -66,7 +66,13 @@ body {
 	align-items: center;
 	justify-content: center;
 	height: 100vh;
+  width: 100vw;
 	text-align: center;
+}
+
+main {
+  height: 80%;
+  width: 40%;
 }
 
 .smt-spinner-circle {
