--- a/public/assets/styles/styles.css
+++ b/public/assets/styles/styles.css
@@ -1,11 +1,11 @@
-button {
+/* button {
     padding: 10px 20px;
     background-color: #007bff;
     color: white;
     border: none;
     border-radius: 5px;
     cursor: pointer;
-}
+} */
 
 #ocr-container {
     /* top: 0;
@@ -19,14 +19,15 @@ button {
     border-radius: 10px;
     padding: 20px;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
-    position: absolute;
-    top: 50%;
-    left: 50%;
+    /* position: absolute; */
+    /* top: 50%; */
+    /* left: 50%; */
     transform: translate(-50%, -50%);
     text-align: center;
     z-index: 2;
     width: 80%;
     height: 80%;
+    /* // style="width: 1200px; height: 1500px" */
 }
 
 /* .loader-wrapper {
@@ -68,6 +69,10 @@ body {
 	height: 100vh;
   width: 100vw;
 	text-align: center;
+}
+
+.ff-button { 
+  background-color: '#4400c9' 
 }
 
 main {
