add ocr only flow

--- a/views/idv-flow.pug
+++ b/views/idv-flow.pug
@@ -6,6 +6,7 @@ html
         script(src='https://assets.frankiefinancial.io/one-sdk/v1/oneSdk.umd.js')
         //- link(rel='stylesheet', href='/assets/styles/styles.css')
         link(rel='stylesheet', href='/assets/styles/styles.branded.css')
+        link(rel='stylesheet', href='/assets/styles/styles.idv.css')
         link(rel='stylesheet', href='https://fonts.googleapis.com/css2?family=Cabin:ital,wght@0,400..700;1,400..700&family=Julius+Sans+One&display=swap')
         meta(name='viewport' content='width=device-width, initial-scale=1.0', charset='UTF-8')
         link(rel='icon', type='image/x-icon', href='/assets/images/favicon.ico')
