--- a/views/welcome.pug
+++ b/views/welcome.pug
@@ -9,6 +9,7 @@ html
     main
       h1 Welcome to Our Digital Bank!
       p Let's get started with your onboarding process.
+      //- TODO: redirect to flow
       a(href="/details") button Start Authentication
     footer
       div.progress-bar
