--- a/views/success.pug
+++ b/views/success.pug
@@ -1,7 +1,7 @@
 doctype html
 html
   head
-    title Bank Onboarding - Success
+    title Success
     link(rel="stylesheet", href="/styles.css")
   body
     header
