--- a/views/manual-forms-intl.pug
+++ b/views/manual-forms-intl.pug
@@ -1,12 +1,12 @@
 extends shared-layout
 
 block headContent
-  link(rel="stylesheet", href="/assets/styles/styles.css")
+  //- link(rel="stylesheet", href="/assets/styles/styles.css")
   script(src='https://assets.dev.frankiefinancial.io/one-sdk/react-form-staging2/oneSdk.umd.js')
 
 block content
   main
-    div(class='onboarding' id='form-container' style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;")
+    div(class='onboarding' id='onboarding-container' style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;")
 
 block scripts
   script(src='/script.manual-forms-intl.js')
