--- a/views/manual-forms.pug
+++ b/views/manual-forms.pug
@@ -2,11 +2,11 @@ extends shared-layout
 
 block headContent
   link(rel="stylesheet", href="/assets/styles/styles.branded.css")
-  script(src='https://assets.dev.frankiefinancial.io/one-sdk/RC/oneSdk.umd.js')
+  script(src='https://assets.dev.frankiefinancial.io/one-sdk/v1/oneSdk.umd.js')
 
 block content
   main
-    div(class='onboarding' id='form-container' style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;")
+    div(class='onboarding' id='onboarding-container' style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;")
 
 block scripts
   script(src='/script.manual-forms.js')
