--- a/views/index.pug
+++ b/views/index.pug
@@ -140,8 +140,9 @@ html
         a(href="ocr-flow")
           div.tile
             p(style="text-decoration: none; color: white;") OCR Only Flow
-        //- div.tile
-        //-     a(href="ocr-headless" style="text-decoration: none; color: white;") OCR Headless <br> (coming soon)
+        a(href="ocr-headless")
+          div.tile
+            p(style="text-decoration: none; color: white;") OCR Headless
         //- div.tile
         //-     a(href="fraud" style="text-decoration: none; color: white;") Fraud <br> (coming soon)
                 //- a(href="modular-forms")
